provision-k8s/kafka-tools.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracing-cluster-topics-ui
spec:
  selector:
    matchLabels:
      app: tracing-cluster-topics-ui
  template:
    metadata:
      labels:
        app: tracing-cluster-topics-ui
    spec:
      containers:
        - name: tracing-cluster-topics-ui
          image: landoop/kafka-topics-ui
          ports:
            - name: http
              containerPort: 8000
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
...


---
apiVersion: v1
kind: Service
metadata:
  name: tracing-cluster-topics-ui
spec:
  type: ClusterIP
  selector:
    app: tracing-cluster-topics-ui
  ports:
    - name: http
      protocol: "TCP"
      port: 8000
      targetPort: 8000

...


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracing-cluster-connect-ui
spec:
  selector:
    matchLabels:
      app: tracing-cluster-connect-ui
  template:
    metadata:
      labels:
        app: tracing-cluster-connect-ui
    spec:
      containers:
        - name: kafka-connect-ui
          image: landoop/kafka-connect-ui
          ports:
            - name: http-kc
              containerPort: 8000
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
...


---
apiVersion: v1
kind: Service
metadata:
  name: tracing-cluster-connect-ui
spec:
  type: ClusterIP
  selector:
    app: tracing-cluster-connect-ui
  ports:
    - name: http
      protocol: "TCP"
      port: 8000
      targetPort: 8000
...
