provision-k8s/neo4j.yml
---
apiVersion: v1
kind: Service
metadata:
  name: neo4j
  labels:
    app: neo4j
spec:
  ports:
  - port: 7474
    name: web
  - port: 7867
    name: bolt
  clusterIP: None
  selector:
    app: neo4j
...


---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: neo4j
spec:
  selector:
    matchLabels:
      app: neo4j
  serviceName: neo4j
  replicas: 1
  template:
    metadata:
      labels:
        app: neo4j
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: neo4j
        image: razalgethi/trace-grapher-neo4j
        ports:
        - containerPort: 7474
          name: web
        - containerPort: 7687
          name: bolt
        volumeMounts:
        - name: neo4j-data
          mountPath: /data
      #   - name: conf
      #     mountPath: /var/lib/neo4j/conf
      # volumes:
      #   - name: conf
      #     configMap:
      #       name: neo4j-conf
        readinessProbe:
          tcpSocket:
            port: 7687
          initialDelaySeconds: 30
          periodSeconds: 3
        livenessProbe:
          initialDelaySeconds: 60
          tcpSocket:
            port: 7687
        resources:
          requests:
            cpu: "500m"
            memory: "2Gi"
          limits:
            cpu: "2"
            memory: "8Gi"
  volumeClaimTemplates:
  - metadata:
      name: "neo4j-data"
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: "local-path"
      resources:
        requests:
          storage: 20Gi
...
